Update1 index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Monetag verification -->
   <meta name="monetag" content="0e14315eb68e0fe411c78cb2c6c15a02">
 
-  <title>Gauransh Official Site</title>
+  <title>Techinfo Official Site</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -252,7 +252,7 @@
         Verified & policy‑friendly — built for speed and clarity
       </div>
       <h1>
-        Welcome to the <span class="accent">Gauransh Official Site</span>
+        Welcome to the <span class="accent">Techinfo Official Site</span>
       </h1>
       <p>
         Clean, fast, and ad‑network ready. Explore projects, read tutorials, and follow updates —
@@ -270,17 +270,28 @@
   <section id="projects" class="section container">
     <div class="grid">
       <div class="card">
-        <h3>Project One</h3>
-        <p>Brief description of a recent project. Add 3–5 sentences here describing purpose, stack, and outcome.</p>
+        <h3>Weather App</h3>
+        <p>I built a simple weather application using HTML, CSS, and JavaScript. It fetches live weather data from the OpenWeather API and displays temperature, humidity, and conditions for any city. The app is fully responsive and works on mobile devices. Through this project, I learned how to handle API requests and improve UI design with CSS flexbox.
+
+If you add 3–5 projects like this, each with a proper description and maybe a blog post explaining the process, your site will look much more complete and professional.
+Do you want me to draft ready‑made text for 3 sample projects (like a web app, a portfolio, and a blog system) that you can paste directly into your site?
+</p>
       </div>
       <div class="card">
-        <h3>Project Two</h3>
-        <p>Highlight a tutorial or build log. Keep content original and detailed to meet ad network quality guidelines.</p>
+        <h3>Personal Portfolio Website</h3>
+        <p>This is my personal portfolio site created with HTML, CSS, and GitHub Pages. It showcases my projects, blog posts, and contact information in a clean, modern UI. The site uses a dark theme with accent colors for a professional look.
+Features: Multi‑page navigation, responsive layout, privacy policy page.
+Learning outcome: I practiced structuring a website properly for ad networks and improved my design skills.
+</p>
       </div>
       <div class="card">
-        <h3>Project Three</h3>
-        <p>Link to a repository or demo. Include screenshots and clear explanations of features and learnings.</p>
-      </div>
+        <h3>Blog System</h3>
+          <p> I developed a simple blog system using JavaScript and Markdown files hosted on GitHub Pages. It allows me to publish articles easily and organize them by category. Each post is styled for readability and optimized for mobile.
+Features: Blog index page, individual post pages, easy content updates.
+Learning outcome: I learned how to manage content dynamically and keep a site active with fresh posts.
+ </p></p>
+        <div>
+         
     </div>
   </section>
 
