--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ Learning outcome: I learned how to manage content dynamically and keep a site ac
     <div class="grid">
       <div class="card">
         <h3>Contact</h3>
-        <p>Email: yourname@example.com</p>
-        <p>Social: Add links to GitHub, Twitter/X, LinkedIn.</p>
+        <p>Email: aditya020967@outlook.com </p>
+        <p> https://t.me/sophiarainnnu </p>
       </div>
       <div class="card">
         <h3>Privacy policy</h3>
