--- a/index.html
+++ b/index.html
@@ -323,11 +323,16 @@ Learning outcome: I learned how to manage content dynamically and keep a site ac
       </div>
       <div class="card">
         <h3>Privacy policy</h3>
-        <p>Create a dedicated privacy.html page and link it here. Mention cookies/analytics if used and your data practices.</p>
+        <p>https://gauransh222.github.io/PrivacyPolicy</p>
       </div>
       <div class="card">
         <h3>About</h3>
-        <p>Introduce yourself, your interests, and what visitors will find here. Keep it friendly and straightforward.</p>
+        <p>
+
+We provide free content and services without collecting personal information.
+Our website uses anonymous data only to deliver relevant advertisements.
+Your privacy is always respected and protected here.
+</p>
       </div>
     </div>
   </section>
